--- a/config/default/manager_image_patch.yaml
+++ b/config/default/manager_image_patch.yaml
@@ -9,4 +9,5 @@ spec:
       containers:
       # Change the value of image field below to your controller image URL
       - image: djablonski/k8s-db-controller
+        imagePullPolicy: IfNotPresent
         name: manager
